spring-petclinic-vets-service/vets-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vets-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: vets-service
spec:
    rules:
    - host: hello-world1.info
      http:
        paths:
        - pathType: ImplementationSpecific
          path: /api/vet(/|$)(.*)
          backend:
            service:
              name: vets-service
              port:
                number: 8082
